--- a/todo-api/package.json
+++ b/todo-api/package.json
@@ -9,6 +9,7 @@
   "author": "Mike Wittenauer",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.7.13"
   }
 }
